# PiKey

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  grammar-and-syntax.pikey
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  hid.c  hid.h  keys.c  keys.h  main.c  memory.c  memory.h  object.c  object.h  pikey.c  scanner.c  scanner.h  table.c  table.h  usb_descriptors.c  usb_descriptors.h  value.c  value.h  vm.c  vm.h
src/helpers/: colors.c  colors.h  file_utils.c  file_utils.h  formatter.c  formatter.h  pk_errors.c  pk_errors.h  pk_help.c  pk_help.h  print_tokens.c  print_tokens.h  substring.c  substring.h
src/parser/: parser.c  parser.h  scanner.c  scanner.h  token.c  token.h  token_type.h
src/parser/transpilers/: rpi_pico_python.c  rpi_pico_python.h
src/parser/transpilers/inits/: pico.py  string_from_file.py
